--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,9 @@ html
         div#main_wrapper
             div.no_photo No Photo Available
 
-        button#requestPhotoButton Request a photo
+        button#requestPhotoButton
+            div#request_photo_button_enabled Request a photo
+            div#request_photo_button_loading.hidden
 
         <!-- Reusable template for adding new photo analysis -->
         div#analysis_template.analysis_wrapper.hidden
